// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test of ResultField component ResultField component render with class 1`] = `
<div
  class="testClass result"
/>
`;

exports[`Test of ResultField component ResultField component render with class and loading 1`] = `
<div
  class="testClass result loading"
>
  <div
    class="loader"
  >
    <svg
      class="circular-loader"
      viewBox="25 25 50 50"
    >
      <circle
        class="loader-path"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke="#70c542"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`Test of ResultField component ResultField component render with class, text and loading 1`] = `
<div
  class="testClass result loading"
>
  <div
    class="loader"
  >
    <svg
      class="circular-loader"
      viewBox="25 25 50 50"
    >
      <circle
        class="loader-path"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke="#70c542"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`Test of ResultField component ResultField component render with text 1`] = `
<div
  class="result"
>
  testText
</div>
`;

exports[`Test of ResultField component ResultField component render without props 1`] = `
<div
  class="result"
/>
`;
